# CodeWin11

./: .auto_commit_push.sh.swp  .cloc.feb.2024.txt.swp  .gitignore  README.md  auto_commit_push.sh  auto_commit_push2.sh  cloc.feb.2024.txt
AndroidStudioProjects/app_widgets/: pubspec.yaml
AndroidStudioProjects/books_reader/: README.md  pubspec.yaml
AndroidStudioProjects/bottom_nav_drawer/: README.md  pubspec.yaml
AndroidStudioProjects/chrome_clone/: README.md  pubspec.yaml
AndroidStudioProjects/code_book_reading/: README.md  pubspec.yaml
AndroidStudioProjects/file_manager/: pubspec.yaml
AndroidStudioProjects/flower/: pubspec.yaml
AndroidStudioProjects/flutter1/: pubspec.yaml
AndroidStudioProjects/flutter_widgets1/: README.md  pubspec.yaml
CodeC++/files/: index.py
HibernateManyToMany/: build.xml
RustProjects/: The Rust Programming Language.mhtml
RustProjects/RustRoverProject/: Cargo.toml
RustProjects/RustRoverProject/src/: main.rs
booksManager/: build.xml
important_files/: Backup-codes-gracianomathey.txt
important_links_to_learn_hard/: .important_links.pdf.swp  important_links.txt
jpa02/: build.xml
pensees/: .how_to_manage_time_and_avoid_bornout.txt.swp  .link_to_rustrover.txt.swp  bonne_motivation.txt  emploi_du_temps.txt  explanations.txt  how_to_manage_time_and_avoid_bornout.txt  link_to_rustrover.txt  mes_pensees.txt  objectfis2024.txt  problems_to_solve.txt  secretaires.txt  yvan_commands.txt
projectProg/: build.xml
schoolBus/: build.xml
socialmedia/: notes.md
token/: .ali_database.txt.swp  ali_database.txt  token_github.txt
(+957 files in other folders)
